--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     build: .
     command: bash bash.sh
     environment:
-      API_ID: # Your API HASH from my.telegram.org
-      API_HASH: # Your API ID from my.telegram.org
-      BOT_TOKEN: # Bot token, get it from @BotFather 
-      SESSION: # Pyrogram string session
-      AUTH: # User ID of Bot owner
-      FORCESUB: # Username name of public channel without using '@'
+      API_ID: 27621449 # Your API HASH from my.telegram.org
+      API_HASH: b1118d4dd11827478807d36b317db4be # Your API ID from my.telegram.org
+      BOT_TOKEN: 5407885401:AAH5T1ZH44BV2XfG-s-pzv6vAg1tT8sdLLs # Bot token, get it from @BotFather 
+      SESSION: BQDFEbC_NhWKlqD6tn7tMuCqI6jCGK2RTGvH_C2etFkdB1jPGIdirZHTZi-2ni5P4AYkuwfrPoA5Zg070_2KsdBYdrZMUMGF9Je583cR1vbNSbAugQbJI9eqzGirjZJNc5pflRM_8U26ngYi6uJ_dGe1DWD8LETUXvYQZZN8iuYGvArNJTgc4qPS0eycIjuCXRoroLkmSFKNope5oMHOiwI9NhrrtEH06wqNdf4dw64X3aQbMrLhrPrDqytN2GKwnqzPq5QvYN3bqy-A7RPs5Ey6SV4RIPIM1l_jHUl4xSNXFcR49rHxiF3U0UytCx-HT2b38QFwMQp7BprvjgLhjlCLVbgQA # Pyrogram string session
+      AUTH: 1438138105 # User ID of Bot owner
+      FORCESUB: @YanzzUcull # Username name of public channel without using '@'
